# pattern-demo

./: CMakeLists.txt
cmake/: clang_format.cmake
decorate/: CMakeLists.txt  basic_mailer.cc  basic_mailer.hpp  cooldown_mailer.cc  cooldown_mailer.hpp  mailer.hpp  mailer_decorator.cc  mailer_decorator.hpp  main.cc
